fixed alignement issue on genre type and also made drop downdown content close down after a pick

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -237,7 +237,7 @@ main {
       }
       article.genre {
         color: $general_color;
-        width: 200px;
+        width: 180px;
 
         a.plus {
           background-color: #f4f4f4;
